--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "@fl0/template-nodejs",
+  "name": "atlas_starter_nodejs",
   "version": "1.0.0",
-  "description": "A simple Node.js Express app for getting started on FL0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+  "description": "MongoDB Node.js driver and Atlas Starter Application",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mongodb-university/atlas_starter_nodejs.git"
   },
-  "author": "",
+  "author": "chris.cho@mongodb.com",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mongodb-university/atlas_starter_nodejs/issues"
+  },
+  "homepage": "https://github.com/mongodb-university/atlas_starter_nodejs#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "mongodb": "^3.5.9"
   }
 }
